<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMenuBackground"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewNameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPhotoProfile" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewPhotoProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_image_search"
                android:backgroundTint="@color/colorHint"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewPhotoProfile"
                app:layout_constraintStart_toEndOf="@+id/imageViewPhotoProfile" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/info"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toStartOf="@+id/btnInfoProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile" />

            <Button
                android:id="@+id/btnInfoProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_arrow_down"
                android:backgroundTint="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile" />

            <FrameLayout
                android:id="@+id/frame_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnInfoProfile">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/loginProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:autofillHints="login"
                        android:hint="@string/prompt_login"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorHint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/emailProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:autofillHints="@string/prompt_email"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorHint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/loginProfile" />

                    <EditText
                        android:id="@+id/phoneProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:autofillHints="@string/phone_number"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorHint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailProfile" />

                    <EditText
                        android:id="@+id/birthdayProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:autofillHints="@string/birthday"
                        android:hint="@string/birthday"
                        android:inputType="date"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorHint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/phoneProfile" />

                    <EditText
                        android:id="@+id/heightProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:autofillHints="@string/sm"
                        android:hint="@string/sm"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorHint"
                        app:layout_constraintEnd_toStartOf="@+id/textView9"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/birthdayProfile" />

                    <EditText
                        android:id="@+id/weightProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:autofillHints="@string/kg"
                        android:hint="@string/kg"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorHint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/birthdayProfile" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/height"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toBottomOf="@+id/heightProfile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/heightProfile" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/weight"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toBottomOf="@+id/weightProfile"
                        app:layout_constraintStart_toEndOf="@+id/textView9"
                        app:layout_constraintTop_toTopOf="@+id/weightProfile" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/birthdayProfile" />

                    <Button
                        android:id="@+id/btnSaveProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:enabled="false"
                        android:text="Save"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/heightProfile" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>